--- a/index.html
+++ b/index.html
@@ -5,14 +5,24 @@
 	<link rel="stylesheet" href="stylesheet.css">
 </head>
 <body ng-app="currentYear">
-	<div ng-controller="CurCtrl">
-		<p class="current-year">It's {{ currentYear }}.</p>
-		<span class="click" ng-click="changing = !changing"></span>
-		<div class="bot-text">
-			<p ng-show="changing" ng-click="changing = !changing" class="transgression">{{ transgression }}</p>
-			<span ng-show="!changing" class="transgression"><input id="edit" ng-blur="changing = !changing; setSearch()" ng-model="transgression"></span>
+	<div class="page">
+		<div ng-controller="CurCtrl">
+			<p class="current-year">It's {{ currentYear }}.</p>
+			<span class="click" ng-click="changing = !changing"></span>
+			<div class="bot-text">
+				<p ng-show="changing" ng-click="changing = !changing" class="transgression">{{ transgression }}</p>
+				<span ng-show="!changing" class="transgression"><input id="edit" ng-blur="changing = !changing; setSearch()" ng-model="transgression"></span>
+			</div>
 		</div>
+		<span class="instructions">Click the bottom half of the screen to add your own text, then share the URL.</span>
 	</div>
-	<span class="instructions">Click the bottom half of the screen to add your own text, then share the URL.</span>
+	<noscript>
+    <style type="text/css">
+        .page {display:none;}
+    </style>
+    <div class="no-js">
+    	It's the Current Year. Why is Javascript disabled?
+    </div>
+</noscript>
 </body>
 </html>
